Fix top margin for map container so it doesn't overlap the line above it

--- a/css/main.css
+++ b/css/main.css
@@ -464,7 +464,7 @@ body.cityPage #graphContainer{
 
 #graphContainer.mapQuestion {
 	position: relative;
-	margin-top: -55px;
+	/*margin-top: -55px;*/
 	height: auto;
     width: 70%;
     margin-left: 10%;
